k8s/blue-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-blue
  annotations:
    deployment.kubernetes.io/progress-deadline-seconds: "300"  # 5 minutes
  namespace: app
  labels:
    app: weather-app
    version: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: weather-app
      version: blue
  template:
    metadata:
      labels:
        app: weather-app
        version: blue
    spec:
      containers:
        - name: weather-app
          image: weather-app:local
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            timeoutSeconds: 1
