k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather
  template:
    metadata:
      labels:
        app: weather
    spec:
      containers:
        - name: weather-container
          image: eslintpurity/weather-app:f0c4a21
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
