k8s/switch-to-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-app
  namespace: app
spec:
  selector:
    app: weather-app
    version: blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
