k8s/switch-to-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-app
  namespace: app
spec:
  selector:
    app: weather-app
    version: green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
